codama-macros/tests/node_attribute/number_type_node_endian_missing.fail.rs
use codama_macros::node;

#[node(numberTypeNode(u32))]
pub struct Foo(usize);

fn main() {}
